--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -11,7 +11,8 @@
 <link rel="manifest" href="{{ favicon_path }}/site.webmanifest">
 <link rel="shortcut icon" href="{{ favicon_path }}/favicon.ico">
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="application-name" content="{{ site.title }}">
-<meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="{{ favicon_path }}/browserconfig.xml">
+<meta name="msapplication-TileColor" content="#140b0b">
 <meta name="theme-color" content="#ffffff">
